<resources>
    <string name="app_name">ForYou</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food1">Rich in omega-3 fatty acids, this fish is known for its
        antioxidant and anti-inflammatory properties, which relax the uterus and fight cramps.</string>
    <string name="food2">Drinking a lot of water is always important, and this is especially true during your period.
        Staying hydrated can reduce your chances of getting dehydration headaches, a common symptom of menstruation
        .Drinking plenty of water can also stop you from retaining water and bloating.
    </string>
    <string name="food3">Water-rich fruits, such as watermelon and cucumber, are great for staying hydrated.
        Sweet fruits can help you curb your sugar cravings without eating a lot of refined sugars,
        which can cause your glucose levels to spike and then crash.</string>
    <string name="food4">A tasty and beneficial snack, dark chocolate is rich in iron and magnesium.
        A 100-gram bar of 70 to 85 percent dark chocolate contains
        67 percent of the recommended daily intake (RDI) for iron and 58 percent of the RDI for magnesium.</string>
    <string name="food5">It’s common to experience a dip in your iron levels during your period, particularly if your menstrual flow is heavy. This can lead to fatigue, bodily pain, and dizziness.

Leafy green vegetables such as kale and spinach can boost your iron levels. Spinach is also rich in magnesium.</string>
    <string name="do2">► Use a heating pad on your lower abdomen or lower back.</string>
    <string name="do1">► Eat healthy food and on proper time.</string>
    <string name="do3">► Increase water intake.</string>
    <string name="do4">► Eat dates
        Dates are a great source of iron which can compensate for the lost blood.</string>
    <string name="do5">► Get a 30-minute walk or gentle stretches, it helps relieve cramps.</string>
    <string name="dont1">► Reduce intake of junk food and salted chips. It can increase your fluid retention.</string>
    <string name="dont2">► Reduce consumption of caffeine Excessive caffeine intake will increase the pain.</string>
    <string name="dont3">► Dont consume painkillers frequently during periods as they may cause nausea, drowsiness, headache for some women.</string>
    <string name="dont4">► Dont stay up too late. Proper sleep is needed during your cycle.</string>
    <string name="dont5">► Eating to much dairy products during this time can  leads to water retention and even cause constipatio.</string>
    <string name="yogaconcentration">Concentration Build Yoga</string>
    <string name="yogastress">Stress Release Yoga</string>
    <string name="yogaanxiety">Anxiety Release Yoga</string>
    <string name="yogafocus">Focus Build Yoga</string>
    <string name="yoganeck">Neck Stretching Yoga</string>
    <string name="stretchingFullBody">Full Body Stretching</string>
    <string name="stretchingShoulder">Shoulder Stretching</string>
    <string name="general">General Stretching</string>
    <string name="goodmorning">Good Morning</string>
    <string name="morning">Hopefully you have a better sleep</string>
    <string name="sleepq1">How was your sleep ?</string>
    <string name="sleepq2">How many hours you slept today?</string>
    <string name="sleepq3">Note: You should do some exercise and yoga in morning. If having any sleeping issues please try to listen some deep sleep musics.</string>
    <string name="sleepHead">What is sleep hygiene?</string>
    <string name="sleepq1ans">Sleep hygiene is defined as behaviors that one can do to help promote good sleep using behavioral interventions. Getting good sleep is important in maintaining health. There are several things that you can do to promote good sleep and sleep hygiene, and ultimately get better sleep.</string>
    <string name="sleeppoor1">Patterson points to seven signs that you may not be getting enough sleep or that you may have a sleep disorder:</string>
    <string name="sleeppoor2">5. Daytime sleepiness, which can be caused by a sleep disorder or nighttime behaviors that reduce your sleep duration.</string>
    <string name="sleeppoor3">6. General fatigue, which may occur for months or years but does not include daytime sleepiness.</string>
    <string name="sleeppoor4">7. Increased appetite, which may be caused by hormone imbalances that can lead you to feel hungrier than usual and then less satisfied when you do eat.</string>
    <string name="sleeppoor5">8. Inability to fall asleep, which in many cases is caused by digital devices. Melatonin is a hormone crucial to the sleep-wake cycle, and the blue light from smartphones and tablets reduces melatonin production.</string>
    <string name="sleeppoor6">9. Frequent trips to the bathroom during the night, a condition known as nocturia, may be caused by sleep apnea, certain medications or caffeine.</string>
    <string name="sleeppoor7">10. Nighttime awakenings, which are a common result of alcohol. Although alcohol may help you get to sleep, your body’s overnight processing of the alcohol sugars can lead to waking up, increased snoring, sleep apnea and nocturia.</string>
    <string name="sleeppoor8">11. Waking up gasping or choking, which may be symptom of sleep apnea, a condition in which the airway becomes blocked during sleep.</string>
    <string name="sleeppoor9">1. Frequent sleep disturbances</string>
    <string name="sleeppoor10">2. Excessive daytime sleepiness</string>
    <string name="sleeppoor11">3. Lack of consistency in sleep quality or quantity</string>
    <string name="sleeppoor12">4. Moodiness, Irritability, Low mood, Forgetfulness, Poor concentration, Lack of motivation</string>
    <string name="sleepqans1">Try to go to sleep and wake up at about the same times every day — even on weekends. This reinforces your body’s sleep cycle (your internal clock), which can make it easier for you to fall asleep and wake up every day. Sticking to a consistent schedule may also help reduce daytime sleepiness. Make sure that the bedtime you pick allows you to get 7 to 8 hours of sleep each night.</string>
    <string name="sleepqans2" />
    <string name="sleepqans3">Electronic devices like your phone emit blue light, which can reduce the melatonin levels in your body. Melatonin is a chemical that controls your sleep/wake cycle. When your melatonin levels dip, it can be more difficult to fall asleep. Devices that emit blue light can also distract you, keeping your brain alert. This may make it harder to fall asleep. You might think that not looking at your phone close to bedtime is enough, but keeping your phone near your bed can disrupt your sleep, even if you’re not aware of it. The message notifications, buzzing, and light that can suddenly pop on in the middle of the night can wake you up momentarily, leading to an interrupted sleep.</string>
    <string name="sleepqans4">As little as 30 minutes of aerobic exercise per day can improve your sleep quality, as well as your overall health. And if you can exercise outside, that might increase the benefits even more, since exposure to natural light helps regulate your sleep cycle. But if you can’t get outside, don’t worry. Even regular indoor exercise may help you sleep better. Just avoid exercising within an hour or two of your bedtime. This can increase your energy levels and body temperature, which may make it harder to fall asleep. If you want to do some type of activity later in the day, try doing stretches or yoga.</string>
    <string name="sleepqans5">The effects of caffeine can last 3 to 7 hours after you consume it. This means that your afternoon cup of coffee may keep you awake and alert a lot longer than you’d like. Although it’s usually best to limit your caffeine intake to the morning hours, keep in mind that everyone has a different tolerance to caffeine. Some people may be able to stretch their consumption to midafternoon, while others might need to cut themselves off much earlier in order to fall asleep easily. The less caffeine you consume, the more sensitive you may be to its effects.</string>
    <string name="sleepqans6">A cool, dark, quiet room may help you fall asleep and stay asleep more easily. For most people, a bedroom temperature between 60°F and 67°F (15.6°C and 19.4°C) is the optimal temperature for sleeping. It’s also important to make sure you have a comfortable mattress, pillows, and bed linens. The more comfortable you are, the easier it may be to fall asleep and stay asleep. Want suggestions? Browse our market, filled with editor-trusted and expert-verified pillow and mattress recommendations. If you’re a light sleeper or have noisy neighbors, a good pair of earplugs may help you sleep without being disrupted. Also, if your bedroom gets flooded with too much light, you may want to consider using blackout curtains or an eye mask to keep your sleep environment as dark as possible.</string>
    <string name="benifitsJournal">Benifits of journal writting :</string>
    <string name="benifitsJournal1">1. Improves Mental Health.</string>
    <string name="benifitsJournal2">2. Encourages Self-Confidence.</string>
    <string name="benifitsJournal3">3. Boosts Emotional Intelligence.</string>
    <string name="benifitsJournal4">4. Helps with Achieving Goals.</string>
    <string name="benifitsJournal5">5. Inspires Creativity.</string>
    <string name="benifitsJournal6">6. Boosts Memory.</string>
    <string name="benifitsJournal7">7. Enhances Critical Thinking Skills.</string>
    <string name="benifitsJournal8">8. Heightens Academic Performance.</string>
    <string name="benifitsJournal9">9. Improves Physical Health.</string>
    <string name="benifitsJournal10">10. Strengthens Communication and Writing Skills.</string>
    <string name="benifitsJournal11">Tips for How to Write a Journal</string>
    <string name="benifitsJournal12">1. Choose your kind of journal.</string>
    <string name="benifitsJournal13">2. Date your entry.</string>
    <string name="benifitsJournal14">3. Tell the truth.</string>
    <string name="benifitsJournal15">4. Write down details.</string>
    <string name="benifitsJournal16">5. Write down what you felt.</string>
    <string name="benifitsJournal17">6. Write a lot or a little.</string>
    <string name="benifitsJournal18">7. If you’ve got writer’s block, write about gratitude.</string>
    <string name="benifitsJournal19">8. Schedule your journaling into your day.</string>
    <string name="collectingitems">Collecting Items</string>
    <string name="collectingiemsdesc">Collecting items may help kids build their cognitive skills of classifying and grouping things and ability to spot differences. Some of the collectable items can be:</string>
    <string name="desc2">1. stamps  2. coins  3. rocks  4. comic books  5.Toys</string>
</resources>