<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doanddont"
    android:background="@drawable/women3">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="1"
                android:background="@drawable/shape4"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Do's"
                    android:layout_gravity="center"
                    android:textSize="25dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do1"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/doimg1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/do2"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/doimg2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/do3"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/doimg3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/do4"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/doimg4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/do5"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/doimg5"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="1"
                android:background="@drawable/shape4"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dont's"
                    android:layout_gravity="center"
                    android:textSize="25dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dont1"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/dontimg1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dont2"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/dontimg2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dont3"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/dontimg3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dont4"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/dontimg4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dont5"
                        android:textSize="15dp"/>
                    <ImageView
                        android:id="@+id/dontimg5"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>